--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-#background { 
+#background {  
 	background-color:#DAEEFF;
 } 
 .font_Kreon{
@@ -12,17 +12,29 @@
 /*titre webzine*/
 .title{
 	font-family: 'Amatic SC', cursive;
-	font-size: 5rem ;
+	font-size: 5rem;
 }
 .sous_titre{
 	font-family: 'Amatic SC', cursive;
-	font-size: 3rem ;
+	font-size: 3rem;
 }
 #title_wzine {
 	display: flex;
     justify-content: center;
-    font-size: 6em;
+    font-size: 6em !important;
+    color: #ff116e;    
 }
+#e_title_wzine {
+	color: #4a86e8; 
+}
+#title_wzine:hover {
+	text-decoration: none;
+	color: #4a86e8;
+}
+#e_title_wzine:hover {
+	color: #ff116e;
+}
+
 #user{
 	font-size:1.5em;
 }
@@ -103,6 +115,9 @@
 	margin-bottom: 50px;
 	font-size: 1.3rem ;
 }
+#logo_marge{
+	height: 15em;
+}
 
  /*Main articles*/
  .lien_main_article{
@@ -124,10 +139,39 @@
 }
 
 
-/*articles*/
+/*article*/
 .article {
 	text-align: center;
 }
+#background-color_article{
+	background-color: white;
+}
+#placement_article {
+	margin: 2em; 
+	overflow: auto; 
+	height: 37em;
+}
+
+/*main_article articles_tous rubrique*/
+#container {
+	list-style: none;
+}
+#card {
+	margin: 2em; 
+	padding: 1em;
+}
+#card_titre-article {
+	margin-bottom: 0.5em; 
+	font-weight: bold;
+}
+#card_image-article {
+	margin-bottom: 0.5em; 
+	font-weight: bold;
+	width: 20em;
+}
+
+
+
 /* lol*/
 .art_lol {
 	color: #6EDD97;
